--- a/build.gradle
+++ b/build.gradle
@@ -32,6 +32,7 @@ dependencies {
     providedRuntime 'org.springframework.boot:spring-boot-starter-tomcat'
     compile("org.postgresql:postgresql:42.2.5")
     compile group: 'org.springframework.boot', name: 'spring-boot-starter-thymeleaf'
+    compile 'org.springframework.boot:spring-boot-starter-security'
     testImplementation 'org.springframework.boot:spring-boot-starter-test'
     testImplementation 'junit:junit:4.12'
     testCompile('junit:junit:4.12') {
